Fix bug where container was vertically cut off on small screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -92,6 +92,12 @@ body {
     }
 }
 
+@media (height <= 750px) {
+    body {
+        align-items: start;
+    }
+}
+
 .header {
     display: flex;
     align-items: center;
